src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from src/Parser.y
-----------------------------------------------------------------------------

state 24 contains 10 shift/reduce conflicts.
state 69 contains 3 shift/reduce conflicts.
state 70 contains 2 shift/reduce conflicts.
state 71 contains 1 shift/reduce conflicts.
state 108 contains 1 shift/reduce conflicts and 39 reduce/reduce conflicts.
state 121 contains 2 shift/reduce conflicts.
state 123 contains 2 shift/reduce conflicts.
state 130 contains 39 reduce/reduce conflicts.
state 136 contains 1 shift/reduce conflicts.
state 139 contains 1 shift/reduce conflicts.
state 154 contains 4 reduce/reduce conflicts.

rule 29 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseMain -> start                          (0)
	start -> start1                                    (1)
	start1 -> decl                                     (2)
	start1 -> decl ';;'                                (3)
	start1 -> start1 ';;' decl                         (4)
	decl -> let bindings                               (5)
	decl -> let rec bindings                           (6)
	bindings -> binding                                (7)
	bindings -> bindings and binding                   (8)
	binding -> pattern '=' expr                        (9)
	binding -> id parameters ':' type '=' expr         (10)
	parameters -> parameter                            (11)
	parameters -> parameters parameter                 (12)
	pattern -> id                                      (13)
	pattern -> '_'                                     (14)
	pattern -> constant                                (15)
	pattern -> pattern '|' pattern                     (16)
	pattern -> pattern as id                           (17)
	pattern -> '(' pattern ')'                         (18)
	pattern -> constr patterns_nosep                   (19)
	pattern -> '(' patterns_comma ')'                  (20)
	pattern -> '[' patterns_semi ']'                   (21)
	pattern -> pattern '::' pattern                    (22)
	patterns_nosep ->                                  (23)
	patterns_nosep -> patterns_nosep pattern           (24)
	patterns_comma ->                                  (25)
	patterns_comma -> patterns_comma ',' pattern       (26)
	patterns_semi ->                                   (27)
	patterns_semi -> patterns_comma ';' pattern        (28)
	expr -> infix_expr ':' type                        (29)
	expr -> infix_expr                                 (30)
	infix_expr -> infix_expr bop expr1                 (31)
	infix_expr -> infix_expr '::' infix_expr           (32)
	infix_expr -> expr1                                (33)
	expr1 -> '-' fexpr                                 (34)
	expr1 -> '!' fexpr                                 (35)
	expr1 -> fexpr                                     (36)
	fexpr -> fexpr aexpr                               (37)
	fexpr -> aexpr                                     (38)
	aexpr -> fun parameters '->' expr                  (39)
	aexpr -> fun parameters ':' type '->' expr         (40)
	aexpr -> let bindings in expr                      (41)
	aexpr -> let rec bindings in expr                  (42)
	aexpr -> if expr then expr else expr               (43)
	aexpr -> match expr with pattern_matching          (44)
	aexpr -> aexpr1                                    (45)
	aexpr1 -> id                                       (46)
	aexpr1 -> constr                                   (47)
	aexpr1 -> constant                                 (48)
	aexpr1 -> '(' expr ')'                             (49)
	aexpr1 -> '(' exprs_comma ')'                      (50)
	aexpr1 -> '[' exprs_semi ']'                       (51)
	exprs_comma ->                                     (52)
	exprs_comma -> exprs_comma ',' expr                (53)
	exprs_semi ->                                      (54)
	exprs_semi -> exprs_comma ';' expr                 (55)
	bop -> '+'                                         (56)
	bop -> '-'                                         (57)
	bop -> '*'                                         (58)
	bop -> '/'                                         (59)
	bop -> '<'                                         (60)
	bop -> '<='                                        (61)
	bop -> '='                                         (62)
	bop -> '<>'                                        (63)
	bop -> '>='                                        (64)
	bop -> '>'                                         (65)
	bop -> '&&'                                        (66)
	bop -> '||'                                        (67)
	bop -> ';'                                         (68)
	pattern_matching -> matches                        (69)
	pattern_matching -> '|' matches                    (70)
	matches -> pattern_match                           (71)
	matches -> matches '|' pattern_match               (72)
	pattern_match -> pattern '->' expr                 (73)
	pattern_match -> pattern when expr '->' expr       (74)
	type -> type '->' type1                            (75)
	type -> type1 id                                   (76)
	type -> type_tuple                                 (77)
	type -> type1                                      (78)
	type_tuple -> type                                 (79)
	type_tuple -> type_tuple '*' type                  (80)
	type1 -> id                                        (81)
	type1 -> apo id                                    (82)
	type1 -> '(' type ')'                              (83)
	parameter -> id                                    (84)
	parameter -> '(' id ':' type ')'                   (85)
	constant -> int                                    (86)
	constant -> float                                  (87)
	constant -> string                                 (88)
	constant -> true                                   (89)
	constant -> false                                  (90)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	let            { Lex.Let }
	in             { Lex.In }
	and            { Lex.LetAnd }
	rec            { Lex.Rec }
	as             { Lex.As }
	if             { Lex.If }
	then           { Lex.Then }
	else           { Lex.Else }
	match          { Lex.Match }
	with           { Lex.With }
	when           { Lex.When }
	fun            { Lex.Fun }
	'('            { Lex.LParen }
	')'            { Lex.RParen }
	'['            { Lex.LBracket }
	']'            { Lex.RBracket }
	'+'            { Lex.Plus }
	'-'            { Lex.Minus }
	'*'            { Lex.Times }
	'/'            { Lex.Divide }
	'<'            { Lex.Lt }
	'<='           { Lex.Le }
	'='            { Lex.Eq }
	'<>'           { Lex.Neq }
	'>='           { Lex.Ge }
	'>'            { Lex.Gt }
	'&&'           { Lex.And }
	'||'           { Lex.Or }
	'!'            { Lex.Not }
	id             { Lex.Identifier _ }
	constr         { Lex.Constructor _ }
	int            { Lex.Integer _ }
	float          { Lex.Float _ }
	string         { Lex.String _ }
	true           { Lex.TTrue }
	false          { Lex.FFalse }
	':'            { Lex.Colon }
	'::'           { Lex.DoubleColon }
	';'            { Lex.Semicolon }
	';;'           { Lex.DoubleSemi }
	','            { Lex.Comma }
	'->'           { Lex.Arrow }
	'_'            { Lex.Underscore }
	apo            { Lex.Apostrophe }
	'|'            { Lex.Pipe }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseMain rule  0
	start           rule  1
	start1          rules 2, 3, 4
	decl            rules 5, 6
	bindings        rules 7, 8
	binding         rules 9, 10
	parameters      rules 11, 12
	pattern         rules 13, 14, 15, 16, 17, 18, 19, 20, 21, 22
	patterns_nosep  rules 23, 24
	patterns_comma  rules 25, 26
	patterns_semi   rules 27, 28
	expr            rules 29, 30
	infix_expr      rules 31, 32, 33
	expr1           rules 34, 35, 36
	fexpr           rules 37, 38
	aexpr           rules 39, 40, 41, 42, 43, 44, 45
	aexpr1          rules 46, 47, 48, 49, 50, 51
	exprs_comma     rules 52, 53
	exprs_semi      rules 54, 55
	bop             rules 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68
	pattern_matching rules 69, 70
	matches         rules 71, 72
	pattern_match   rules 73, 74
	type            rules 75, 76, 77, 78
	type_tuple      rules 79, 80
	type1           rules 81, 82, 83
	parameter       rules 84, 85
	constant        rules 86, 87, 88, 89, 90

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseMain -> . start                         (rule 0)

	let            shift, and enter state 4

	start          goto state 5
	start1         goto state 2
	decl           goto state 3

State 1

	start -> . start1                                   (rule 1)

	let            shift, and enter state 4

	start1         goto state 2
	decl           goto state 3

State 2

	start -> start1 .                                   (rule 1)
	start1 -> start1 . ';;' decl                        (rule 4)

	';;'           shift, and enter state 22
	%eof           reduce using rule 1


State 3

	start1 -> decl .                                    (rule 2)
	start1 -> decl . ';;'                               (rule 3)

	';;'           shift, and enter state 21
	%eof           reduce using rule 2


State 4

	decl -> let . bindings                              (rule 5)
	decl -> let . rec bindings                          (rule 6)

	rec            shift, and enter state 10
	'('            shift, and enter state 11
	'['            shift, and enter state 12
	id             shift, and enter state 13
	constr         shift, and enter state 14
	int            shift, and enter state 15
	float          shift, and enter state 16
	string         shift, and enter state 17
	true           shift, and enter state 18
	false          shift, and enter state 19
	'_'            shift, and enter state 20

	bindings       goto state 6
	binding        goto state 7
	pattern        goto state 8
	constant       goto state 9

State 5

	%start_parseMain -> start .                         (rule 0)

	%eof           accept


State 6

	decl -> let bindings .                              (rule 5)
	bindings -> bindings . and binding                  (rule 8)

	and            shift, and enter state 39
	';;'           reduce using rule 5
	%eof           reduce using rule 5


State 7

	bindings -> binding .                               (rule 7)

	in             reduce using rule 7
	and            reduce using rule 7
	';;'           reduce using rule 7
	%eof           reduce using rule 7


State 8

	binding -> pattern . '=' expr                       (rule 9)
	pattern -> pattern . '|' pattern                    (rule 16)
	pattern -> pattern . as id                          (rule 17)
	pattern -> pattern . '::' pattern                   (rule 22)

	as             shift, and enter state 35
	'='            shift, and enter state 36
	'::'           shift, and enter state 37
	'|'            shift, and enter state 38


State 9

	pattern -> constant .                               (rule 15)

	as             reduce using rule 15
	when           reduce using rule 15
	'('            reduce using rule 15
	')'            reduce using rule 15
	'['            reduce using rule 15
	']'            reduce using rule 15
	'='            reduce using rule 15
	id             reduce using rule 15
	constr         reduce using rule 15
	int            reduce using rule 15
	float          reduce using rule 15
	string         reduce using rule 15
	true           reduce using rule 15
	false          reduce using rule 15
	'::'           reduce using rule 15
	';'            reduce using rule 15
	','            reduce using rule 15
	'->'           reduce using rule 15
	'_'            reduce using rule 15
	'|'            reduce using rule 15


State 10

	decl -> let rec . bindings                          (rule 6)

	'('            shift, and enter state 11
	'['            shift, and enter state 12
	id             shift, and enter state 13
	constr         shift, and enter state 14
	int            shift, and enter state 15
	float          shift, and enter state 16
	string         shift, and enter state 17
	true           shift, and enter state 18
	false          shift, and enter state 19
	'_'            shift, and enter state 20

	bindings       goto state 34
	binding        goto state 7
	pattern        goto state 8
	constant       goto state 9

State 11

	pattern -> '(' . pattern ')'                        (rule 18)
	pattern -> '(' . patterns_comma ')'                 (rule 20)

	'('            shift, and enter state 11
	')'            reduce using rule 25
	'['            shift, and enter state 12
	id             shift, and enter state 33
	constr         shift, and enter state 14
	int            shift, and enter state 15
	float          shift, and enter state 16
	string         shift, and enter state 17
	true           shift, and enter state 18
	false          shift, and enter state 19
	','            reduce using rule 25
	'_'            shift, and enter state 20

	pattern        goto state 31
	patterns_comma goto state 32
	constant       goto state 9

State 12

	pattern -> '[' . patterns_semi ']'                  (rule 21)

	']'            reduce using rule 27
	';'            reduce using rule 25
	','            reduce using rule 25

	patterns_comma goto state 29
	patterns_semi  goto state 30

State 13

	binding -> id . parameters ':' type '=' expr        (rule 10)
	pattern -> id .                                     (rule 13)

	as             reduce using rule 13
	'('            shift, and enter state 27
	'='            reduce using rule 13
	id             shift, and enter state 28
	'::'           reduce using rule 13
	'|'            reduce using rule 13

	parameters     goto state 25
	parameter      goto state 26

State 14

	pattern -> constr . patterns_nosep                  (rule 19)

	as             reduce using rule 23
	when           reduce using rule 23
	'('            reduce using rule 23
	')'            reduce using rule 23
	'['            reduce using rule 23
	']'            reduce using rule 23
	'='            reduce using rule 23
	id             reduce using rule 23
	constr         reduce using rule 23
	int            reduce using rule 23
	float          reduce using rule 23
	string         reduce using rule 23
	true           reduce using rule 23
	false          reduce using rule 23
	'::'           reduce using rule 23
	';'            reduce using rule 23
	','            reduce using rule 23
	'->'           reduce using rule 23
	'_'            reduce using rule 23
	'|'            reduce using rule 23

	patterns_nosep goto state 24

State 15

	constant -> int .                                   (rule 86)

	let            reduce using rule 86
	in             reduce using rule 86
	and            reduce using rule 86
	as             reduce using rule 86
	if             reduce using rule 86
	then           reduce using rule 86
	else           reduce using rule 86
	match          reduce using rule 86
	with           reduce using rule 86
	when           reduce using rule 86
	fun            reduce using rule 86
	'('            reduce using rule 86
	')'            reduce using rule 86
	'['            reduce using rule 86
	']'            reduce using rule 86
	'+'            reduce using rule 86
	'-'            reduce using rule 86
	'*'            reduce using rule 86
	'/'            reduce using rule 86
	'<'            reduce using rule 86
	'<='           reduce using rule 86
	'='            reduce using rule 86
	'<>'           reduce using rule 86
	'>='           reduce using rule 86
	'>'            reduce using rule 86
	'&&'           reduce using rule 86
	'||'           reduce using rule 86
	id             reduce using rule 86
	constr         reduce using rule 86
	int            reduce using rule 86
	float          reduce using rule 86
	string         reduce using rule 86
	true           reduce using rule 86
	false          reduce using rule 86
	':'            reduce using rule 86
	'::'           reduce using rule 86
	';'            reduce using rule 86
	';;'           reduce using rule 86
	','            reduce using rule 86
	'->'           reduce using rule 86
	'_'            reduce using rule 86
	'|'            reduce using rule 86
	%eof           reduce using rule 86


State 16

	constant -> float .                                 (rule 87)

	let            reduce using rule 87
	in             reduce using rule 87
	and            reduce using rule 87
	as             reduce using rule 87
	if             reduce using rule 87
	then           reduce using rule 87
	else           reduce using rule 87
	match          reduce using rule 87
	with           reduce using rule 87
	when           reduce using rule 87
	fun            reduce using rule 87
	'('            reduce using rule 87
	')'            reduce using rule 87
	'['            reduce using rule 87
	']'            reduce using rule 87
	'+'            reduce using rule 87
	'-'            reduce using rule 87
	'*'            reduce using rule 87
	'/'            reduce using rule 87
	'<'            reduce using rule 87
	'<='           reduce using rule 87
	'='            reduce using rule 87
	'<>'           reduce using rule 87
	'>='           reduce using rule 87
	'>'            reduce using rule 87
	'&&'           reduce using rule 87
	'||'           reduce using rule 87
	id             reduce using rule 87
	constr         reduce using rule 87
	int            reduce using rule 87
	float          reduce using rule 87
	string         reduce using rule 87
	true           reduce using rule 87
	false          reduce using rule 87
	':'            reduce using rule 87
	'::'           reduce using rule 87
	';'            reduce using rule 87
	';;'           reduce using rule 87
	','            reduce using rule 87
	'->'           reduce using rule 87
	'_'            reduce using rule 87
	'|'            reduce using rule 87
	%eof           reduce using rule 87


State 17

	constant -> string .                                (rule 88)

	let            reduce using rule 88
	in             reduce using rule 88
	and            reduce using rule 88
	as             reduce using rule 88
	if             reduce using rule 88
	then           reduce using rule 88
	else           reduce using rule 88
	match          reduce using rule 88
	with           reduce using rule 88
	when           reduce using rule 88
	fun            reduce using rule 88
	'('            reduce using rule 88
	')'            reduce using rule 88
	'['            reduce using rule 88
	']'            reduce using rule 88
	'+'            reduce using rule 88
	'-'            reduce using rule 88
	'*'            reduce using rule 88
	'/'            reduce using rule 88
	'<'            reduce using rule 88
	'<='           reduce using rule 88
	'='            reduce using rule 88
	'<>'           reduce using rule 88
	'>='           reduce using rule 88
	'>'            reduce using rule 88
	'&&'           reduce using rule 88
	'||'           reduce using rule 88
	id             reduce using rule 88
	constr         reduce using rule 88
	int            reduce using rule 88
	float          reduce using rule 88
	string         reduce using rule 88
	true           reduce using rule 88
	false          reduce using rule 88
	':'            reduce using rule 88
	'::'           reduce using rule 88
	';'            reduce using rule 88
	';;'           reduce using rule 88
	','            reduce using rule 88
	'->'           reduce using rule 88
	'_'            reduce using rule 88
	'|'            reduce using rule 88
	%eof           reduce using rule 88


State 18

	constant -> true .                                  (rule 89)

	let            reduce using rule 89
	in             reduce using rule 89
	and            reduce using rule 89
	as             reduce using rule 89
	if             reduce using rule 89
	then           reduce using rule 89
	else           reduce using rule 89
	match          reduce using rule 89
	with           reduce using rule 89
	when           reduce using rule 89
	fun            reduce using rule 89
	'('            reduce using rule 89
	')'            reduce using rule 89
	'['            reduce using rule 89
	']'            reduce using rule 89
	'+'            reduce using rule 89
	'-'            reduce using rule 89
	'*'            reduce using rule 89
	'/'            reduce using rule 89
	'<'            reduce using rule 89
	'<='           reduce using rule 89
	'='            reduce using rule 89
	'<>'           reduce using rule 89
	'>='           reduce using rule 89
	'>'            reduce using rule 89
	'&&'           reduce using rule 89
	'||'           reduce using rule 89
	id             reduce using rule 89
	constr         reduce using rule 89
	int            reduce using rule 89
	float          reduce using rule 89
	string         reduce using rule 89
	true           reduce using rule 89
	false          reduce using rule 89
	':'            reduce using rule 89
	'::'           reduce using rule 89
	';'            reduce using rule 89
	';;'           reduce using rule 89
	','            reduce using rule 89
	'->'           reduce using rule 89
	'_'            reduce using rule 89
	'|'            reduce using rule 89
	%eof           reduce using rule 89


State 19

	constant -> false .                                 (rule 90)

	let            reduce using rule 90
	in             reduce using rule 90
	and            reduce using rule 90
	as             reduce using rule 90
	if             reduce using rule 90
	then           reduce using rule 90
	else           reduce using rule 90
	match          reduce using rule 90
	with           reduce using rule 90
	when           reduce using rule 90
	fun            reduce using rule 90
	'('            reduce using rule 90
	')'            reduce using rule 90
	'['            reduce using rule 90
	']'            reduce using rule 90
	'+'            reduce using rule 90
	'-'            reduce using rule 90
	'*'            reduce using rule 90
	'/'            reduce using rule 90
	'<'            reduce using rule 90
	'<='           reduce using rule 90
	'='            reduce using rule 90
	'<>'           reduce using rule 90
	'>='           reduce using rule 90
	'>'            reduce using rule 90
	'&&'           reduce using rule 90
	'||'           reduce using rule 90
	id             reduce using rule 90
	constr         reduce using rule 90
	int            reduce using rule 90
	float          reduce using rule 90
	string         reduce using rule 90
	true           reduce using rule 90
	false          reduce using rule 90
	':'            reduce using rule 90
	'::'           reduce using rule 90
	';'            reduce using rule 90
	';;'           reduce using rule 90
	','            reduce using rule 90
	'->'           reduce using rule 90
	'_'            reduce using rule 90
	'|'            reduce using rule 90
	%eof           reduce using rule 90


State 20

	pattern -> '_' .                                    (rule 14)

	as             reduce using rule 14
	when           reduce using rule 14
	'('            reduce using rule 14
	')'            reduce using rule 14
	'['            reduce using rule 14
	']'            reduce using rule 14
	'='            reduce using rule 14
	id             reduce using rule 14
	constr         reduce using rule 14
	int            reduce using rule 14
	float          reduce using rule 14
	string         reduce using rule 14
	true           reduce using rule 14
	false          reduce using rule 14
	'::'           reduce using rule 14
	';'            reduce using rule 14
	','            reduce using rule 14
	'->'           reduce using rule 14
	'_'            reduce using rule 14
	'|'            reduce using rule 14


State 21

	start1 -> decl ';;' .                               (rule 3)

	';;'           reduce using rule 3
	%eof           reduce using rule 3


State 22

	start1 -> start1 ';;' . decl                        (rule 4)

	let            shift, and enter state 4

	decl           goto state 23

State 23

	start1 -> start1 ';;' decl .                        (rule 4)

	';;'           reduce using rule 4
	%eof           reduce using rule 4


State 24

	pattern -> constr patterns_nosep .                  (rule 19)
	patterns_nosep -> patterns_nosep . pattern          (rule 24)

	as             reduce using rule 19
	when           reduce using rule 19
	'('            shift, and enter state 11
			(reduce using rule 19)

	')'            reduce using rule 19
	'['            shift, and enter state 12
			(reduce using rule 19)

	']'            reduce using rule 19
	'='            reduce using rule 19
	id             shift, and enter state 33
			(reduce using rule 19)

	constr         shift, and enter state 14
			(reduce using rule 19)

	int            shift, and enter state 15
			(reduce using rule 19)

	float          shift, and enter state 16
			(reduce using rule 19)

	string         shift, and enter state 17
			(reduce using rule 19)

	true           shift, and enter state 18
			(reduce using rule 19)

	false          shift, and enter state 19
			(reduce using rule 19)

	'::'           reduce using rule 19
	';'            reduce using rule 19
	','            reduce using rule 19
	'->'           reduce using rule 19
	'_'            shift, and enter state 20
			(reduce using rule 19)

	'|'            reduce using rule 19

	pattern        goto state 69
	constant       goto state 9

State 25

	binding -> id parameters . ':' type '=' expr        (rule 10)
	parameters -> parameters . parameter                (rule 12)

	'('            shift, and enter state 27
	id             shift, and enter state 28
	':'            shift, and enter state 68

	parameter      goto state 67

State 26

	parameters -> parameter .                           (rule 11)

	'('            reduce using rule 11
	id             reduce using rule 11
	':'            reduce using rule 11
	'->'           reduce using rule 11


State 27

	parameter -> '(' . id ':' type ')'                  (rule 85)

	id             shift, and enter state 66


State 28

	parameter -> id .                                   (rule 84)

	'('            reduce using rule 84
	id             reduce using rule 84
	':'            reduce using rule 84
	'->'           reduce using rule 84


State 29

	patterns_comma -> patterns_comma . ',' pattern      (rule 26)
	patterns_semi -> patterns_comma . ';' pattern       (rule 28)

	';'            shift, and enter state 65
	','            shift, and enter state 62


State 30

	pattern -> '[' patterns_semi . ']'                  (rule 21)

	']'            shift, and enter state 64


State 31

	pattern -> pattern . '|' pattern                    (rule 16)
	pattern -> pattern . as id                          (rule 17)
	pattern -> '(' pattern . ')'                        (rule 18)
	pattern -> pattern . '::' pattern                   (rule 22)

	as             shift, and enter state 35
	')'            shift, and enter state 63
	'::'           shift, and enter state 37
	'|'            shift, and enter state 38


State 32

	pattern -> '(' patterns_comma . ')'                 (rule 20)
	patterns_comma -> patterns_comma . ',' pattern      (rule 26)
